# opengl-game

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  NOTES  README.md  TODO  imgui.ini
backup/: Makefile
include/: g_string.c  g_string.h  gc_constants.h  gc_example_data.h  gc_material_const.h  gc_opengl.h  gc_opengl_shader.h  gc_stdint.h  gc_string.c  gc_string.h  gc_structs.h  gc_vector.h  glogs.h
res/shaders/: default_fragment-backup.glsl  default_fragment-normal.glsl  default_fragment.glsl  default_vertex.glsl  fragment.glsl  lightCube_fragment.glsl  lightCube_vertex.glsl  vertex.glsl
res/shaders/backups/: default_fragment-1.glsl  default_fragment-viewpos.glsl  default_fragment-working.glsl  default_vertex-viewpos.glsl  default_vertex-working.glsl  material-default_fragment.glsl  material-default_vertex.glsl
res/shaders/breakout/: fragment.glsl  vertex.glsl
src/: appgui.h  entity.c  entity.h  main.c  main.h  mesh.c  mesh.h  mesh_types.h  model.c  model.h  renderer.c  renderer.h  shader.c  shader.h  shader_variables.h  texture.c  texture.h  types.h
src/breakout/: breakout.c  breakout.h
src/test/: gs_test.h  test_facebox.c
